Update WebLayerTreeViewClient overrides for WebKit API change

WebKit API change: https://bugs.webkit.org/show_bug.cgi?id=75577.

BUG=none


Review URL: http://codereview.chromium.org/9008078

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@116580 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: a89b8a431a9f53db1dbb4c1ead571490fef8b3c8